--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     border: border-box;
+    transition-property: all;
+    transition-duration: 20ms;
 
 }
 
@@ -232,4 +234,8 @@ ul p{
 }
 .copyright{
     padding-top: 5px;
+}
+.box:hover{
+    transition-timing-function: ease-out;
+    font-size: 1.1rem;
 }
